fixed sidebar visibility issue with white upload modal

--- a/src/components/SidePanel/SidePanel.scss
+++ b/src/components/SidePanel/SidePanel.scss
@@ -61,5 +61,5 @@
 }
 .side-panel.open {
     right: 0;
-    z-index: 10;
+    z-index: 100;
 }
