--- a/src/components/fileUploadForm/fileUploadForm.scss
+++ b/src/components/fileUploadForm/fileUploadForm.scss
@@ -15,6 +15,9 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 2.3rem;
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.5s, visibility 0.5s;
 
     @include tablet {
         width: 60%;
@@ -110,6 +113,12 @@
             display: none;
         }
     }
+}
+
+.upload.dimmed {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s, visibility 0.5s 0.5s;
 }
 
 .overlay {
